feat: add possibility to add multiple keys to one binding